# cpython-source-deps

./: .gitattributes  .gitignore  20235.diff  CHANGELOG.txt  ChangeLog  INSTALL.txt  MINFO  Makefile  Makefile.bak  Makefile.in  README  README.md  README.rst  aclocal.m4  config.h.in  config.sub  configure  configure.ac  configure_headers.bat  evil.md  manifest.uuid  shell.c  testfile.txt
PyTix-2.0/: BUGS-1.12.txt  BUGS-2.0.txt  INSTALL-1.12.txt  INSTALL-2.0.txt  README-1.12.txt  README-2.0.txt  Tix.py
Python/: BUGS-2.1.txt  INSTALL-2.1.txt  README-2.1.txt  README-2.2.txt  Tix.py
btree/: bt_compact.c  bt_compare.c  bt_conv.c  bt_curadj.c  bt_cursor.c  bt_delete.c  bt_method.c  bt_open.c  bt_put.c  bt_rec.c  bt_reclaim.c  bt_recno.c  bt_rsearch.c  bt_search.c  bt_split.c  bt_stat.c  bt_upgrade.c  bt_verify.c
build_brew/: brew_db.h  db.h  db_int.h  errno.h
build_s60/: db.h  db_int.h
build_vxworks/: db.h  db_cxx.h  db_int.h
build_wince/: db.h
build_windows/: db_cxx.h  db_int.h  dbkill.cpp  libdb_tcl.def
clib/: getcwd.c  getopt.c  isalpha.c  isdigit.c  isprint.c  isspace.c  memcmp.c  memmove.c  printf.c  raise.c  snprintf.c  strcasecmp.c  strdup.c  strerror.c  strtol.c  strtoul.c  time.c
common/: crypto_stub.c  db_byteorder.c  db_err.c  db_getlong.c  db_idspace.c  db_log2.c  db_shash.c  dbt.c  mkpath.c  openflags.c  os_method.c  util_arg.c  util_cache.c  util_log.c  util_sig.c  zerofill.c
crypto/: aes_method.c  buildinf.h  crypto.c  opensslconf.h  opensslconf.h.bak
cxx/: cxx_db.cpp  cxx_dbc.cpp  cxx_dbt.cpp  cxx_env.cpp  cxx_except.cpp  cxx_lock.cpp  cxx_logc.cpp  cxx_mpool.cpp  cxx_multi.cpp  cxx_seq.cpp  cxx_txn.cpp
db/: crdel_rec.c  db.c  db_am.c  db_cam.c  db_cds.c  db_conv.c  db_dispatch.c  db_dup.c  db_iface.c  db_join.c  db_meta.c  db_method.c  db_open.c  db_overflow.c  db_ovfl_vrfy.c  db_pr.c  db_rec.c  db_reclaim.c  db_remove.c  db_rename.c  db_ret.c  db_setid.c  db_setlsn.c  db_stati.c  db_truncate.c  db_upg.c  db_upg_opd.c  db_vrfy.c  db_vrfy_stub.c  db_vrfyutil.c
db185/: db185.c
db_archive/: db_archive.c
db_checkpoint/: db_checkpoint.c
db_codegen/: code_capi.c  code_parse.c  db_codegen.c  db_codegen.h
db_deadlock/: db_deadlock.c
db_dump/: db_dump.c
db_dump185/: db_dump185.c
db_hotbackup/: db_hotbackup.c
db_load/: db_load.c
db_printlog/: db_printlog.c
db_recover/: db_recover.c
db_stat/: db_stat.c
db_upgrade/: db_upgrade.c
db_verify/: db_verify.c
dbinc/: btree.h  clock.h  crypto.h  cxx_int.h  db_am.h  db_dispatch.h  db_join.h  db_page.h  db_server_int.h  db_swap.h  db_upgrade.h  db_verify.h  debug.h  fop.h  globals.h  hash.h  hmac.h  lock.h  log.h  mp.h  mutex.h  mutex_int.h  os.h  qam.h  region.h  rep.h  repmgr.h  shqueue.h  tcl_db.h  txn.h  win_db.h  xa.h
dbm/: dbm.c
dbreg/: dbreg.c  dbreg_rec.c  dbreg_stat.c  dbreg_util.c
doc/: Makefile.in  libmpdec++.3  libmpdec.3  mpdecimal.3
docs/: FAQ.txt  Files.txt  Release-8.0.0.txt  Release-8.0.1.txt  Release-8.0.2.txt  Release-8.1.0.txt  Release-8.1.1.txt  Release-8.1.2.txt  Release-8.1.3.txt  Release-8.2.0.txt  Release-8.4.0.txt  index.html
docs_src/: index_db.html
env/: env_alloc.c  env_config.c  env_failchk.c  env_file.c  env_globals.c  env_method.c  env_name.c  env_open.c  env_recover.c  env_region.c  env_register.c  env_stat.c
examples_c/: bench_001.c  ex_access.c  ex_btrec.c  ex_dbclient.c  ex_env.c  ex_lock.c  ex_mpool.c  ex_sequence.c  ex_thread.c  ex_tpcb.c
examples_cxx/: AccessExample.cpp  BtRecExample.cpp  EnvExample.cpp  LockExample.cpp  MpoolExample.cpp  SequenceExample.cpp  TpcbExample.cpp
fileops/: fop_basic.c  fop_rec.c  fop_util.c
generic/: tclTest.c  tix.h  tixAppInit.c  tixClass.c  tixCmds.c  tixCompat.c  tixDItem.c  tixDef.h  tixDiITxt.c  tixDiImg.c  tixDiStyle.c  tixDiText.c  tixDiWin.c  tixError.c  tixForm.c  tixForm.h  tixFormMisc.c  tixGeometry.c  tixGrData.c  tixGrData.h  tixGrFmt.c  tixGrRC.c  tixGrSel.c  tixGrSort.c  tixGrUtl.c  tixGrid.c  tixGrid.h  tixHLCol.c  tixHLHdr.c  tixHLInd.c  tixHList.c  tixHList.h  tixImgCmp.c  tixImgXpm.c  tixImgXpm.h  tixInit.c  tixInputO.c  tixInt.h  tixList.c  tixMethod.c  (+9 more)
hash/: hash.c  hash_conv.c  hash_dup.c  hash_func.c  hash_meta.c  hash_method.c  hash_open.c  hash_page.c  hash_rec.c  hash_reclaim.c  hash_stat.c  hash_stub.c  hash_upgrade.c  hash_verify.c
hmac/: hmac.c  sha1.c
hsearch/: hsearch.c
include/: Makefile.in  ffitarget.h
libmpdec/: Makefile.in  Makefile.vc  README.txt  basearith.c  basearith.h  bench.c  bench_full.c  bits.h  constants.c  constants.h  context.c  convolute.c  convolute.h  crt.c  crt.h  difradix2.c  difradix2.h  fnt.c  fnt.h  fourstep.c  fourstep.h  io.c  io.h  mpalloc.c  mpalloc.h  mpdecimal.c  mpdecimal.h.in  mpdecimal32vc.h  mpdecimal64vc.h  mpsignal.c  numbertheory.c  numbertheory.h  sixstep.c  sixstep.h  transpose.c  transpose.h  typearith.h  umodarith.h  vcdiv64.asm
libmpdec++/: Makefile.in  Makefile.vc  bench.cc  bench_full.cc  decimal.cc
lock/: lock.c  lock_deadlock.c  lock_failchk.c  lock_id.c  lock_list.c  lock_method.c  lock_region.c  lock_stat.c  lock_stub.c  lock_timer.c  lock_util.c
log/: log.c  log_archive.c  log_compare.c  log_debug.c  log_get.c  log_method.c  log_put.c  log_stat.c
macosx/: configure
man/: Makefile.in
mp/: mp_alloc.c  mp_bh.c  mp_fget.c  mp_fmethod.c  mp_fopen.c  mp_fput.c  mp_fset.c  mp_method.c  mp_mvcc.c  mp_region.c  mp_register.c  mp_resize.c  mp_stat.c  mp_sync.c  mp_trickle.c
ms/: bcb.mak  libeay32.def  nt32.asm.mak  nt32.mak  nt64.asm.mak  nt64.mak  ntdll.mak  version32.rc
mutex/: mut_alloc.c  mut_failchk.c  mut_fcntl.c  mut_method.c  mut_pthread.c  mut_region.c  mut_stat.c  mut_stub.c  mut_tas.c  mut_win32.c  test_mutex.c
os/: os_abort.c  os_abs.c  os_addrinfo.c  os_alloc.c  os_clock.c  os_config.c  os_cpu.c  os_ctime.c  os_dir.c  os_errno.c  os_fid.c  os_flock.c  os_fsync.c  os_getenv.c  os_handle.c  os_map.c  os_mkdir.c  os_open.c  os_pid.c  os_rename.c  os_root.c  os_rpath.c  os_rw.c  os_seek.c  os_stack.c  os_stat.c  os_tmpdir.c  os_truncate.c  os_uid.c  os_unlink.c  os_yield.c
os_brew/: ctime.c  (+25 more)
(+1800 files in other folders)
